--- a/app/src/main/res/layout/fragment_progress.xml
+++ b/app/src/main/res/layout/fragment_progress.xml
@@ -27,7 +27,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
 
-    <!-- Header for milestones and achievements -->
+    <!-- Header for recent activity -->
     <TextView
         android:id="@+id/recentActivity"
         android:layout_width="match_parent"
@@ -44,9 +44,6 @@
         android:layout_marginTop="100dp"
         android:scrollbars="horizontal" />
 
-
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
-  
     <!-- Input field for user to enter a number -->
     <EditText
         android:id="@+id/input_number"
@@ -56,7 +53,6 @@
         android:hint="Enter a number"
         android:inputType="number" />
 
-
     <!-- Button to save the input -->
     <Button
         android:id="@+id/button_save"
@@ -65,4 +61,5 @@
         android:text="Save"
         android:layout_gravity="center"
         android:layout_marginTop="16dp" />
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
