--- a/app/src/main/res/layout/activity_workout_routine_creation.xml
+++ b/app/src/main/res/layout/activity_workout_routine_creation.xml
@@ -6,8 +6,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp"
+    android:padding="0dp"
     tools:context=".WorkoutRoutineCreationActivity">
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:title="Workout Routine"
+        app:titleTextColor="@android:color/white" />
 
     <TextView
         android:id="@+id/label_workout_type"
@@ -54,7 +62,6 @@
         android:hint="Enter workout name"
         android:padding="16dp"
         android:minHeight="48dp"/>
-
 
     <TextView
         android:id="@+id/label_duration"
@@ -131,5 +138,7 @@
         android:text="Save Workout"
         android:padding="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:textColor="@android:color/white"/>
 </LinearLayout>
