--- a/app/src/main/res/layout/activity_post_creation.xml
+++ b/app/src/main/res/layout/activity_post_creation.xml
@@ -1,80 +1,59 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".PostCreationActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
-        app:title="Create Post"
-        app:titleTextColor="@android:color/white"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:title="Workout Routine"
+        app:titleTextColor="@android:color/white" />
 
+    <!-- Scrollable content -->
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <RelativeLayout
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:padding="16dp"
-        app:layout_constraintTop_toTopOf="@id/toolbar"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-        <EditText
-            android:id="@+id/postTitle"
+        <LinearLayout
+            android:id="@+id/main"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="72dp"
-            android:hint="Enter post title"
-            android:inputType="text"
-            android:background="@android:drawable/edit_text" />
+            android:orientation="vertical"
+            android:padding="0dp">
 
-        <EditText
-            android:id="@+id/postDescription"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="8dp"
-            android:hint="Write your post description here"
-            android:inputType="textMultiLine"
-            android:gravity="top"
-            android:minLines="3"
-            android:background="@android:drawable/edit_text"
-            android:layout_below="@id/postTitle" />
+            <LinearLayout
+                android:id="@+id/workout_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="16dp" />
 
-        <ImageView
-            android:id="@+id/postImage"
-            android:layout_width="250dp"
-            android:layout_height="250dp"
-            android:layout_below="@id/postDescription"
-            android:contentDescription="Post Image"
-            android:background="@android:drawable/gallery_thumb"
-            android:visibility="gone" />
+            <Button
+                android:id="@+id/button_add_workout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Add Another Workout"
+                android:padding="16dp"
+                android:layout_marginTop="16dp"
+                android:translationX="16dp" />
 
-        <Button
-            android:id="@+id/addPhotoButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/postImage"
-            android:onClick="addImagePost"
-            android:text="Add Photo" />
+            <Button
+                android:id="@+id/button_save_workout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
+                android:layout_marginBottom="32dp"
+                android:layout_marginEnd="32dp"
+                android:padding="16dp"
+                android:text="Save Routine"
+                android:textColor="@android:color/white"
+                android:translationX="16dp" />
 
-        <Button
-            android:id="@+id/submit_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginEnd="0dp"
-            android:layout_marginBottom="64dp"
-            android:text="Submit" />
-
-    </RelativeLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
+    </ScrollView>
+</LinearLayout>
