--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.MyApplication" parent="Theme.Material3.DayNight.NoActionBar">
+    <!-- Base application theme with AppCompat and Material3 compatibility -->
+    <style name="Base.Theme.MyApplication" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="colorPrimary">#2547a5</item>
         <item name="colorPrimaryDark">#0c2e8c</item>
         <item name="colorAccent">#a9b3cf</item>
@@ -8,11 +8,6 @@
 
     <style name="Theme.MyApplication" parent="Base.Theme.MyApplication" />
 
-
     <style name="Theme.AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
     <style name="Theme.AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
-
-
-
-
 </resources>
