--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -97,7 +97,7 @@
                         android:textStyle="bold" />
 
                     <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/button3"
+                        android:id="@+id/button2"
                         style="@android:style/Widget.Button"
                         android:layout_width="320dp"
                         android:layout_height="60dp"
@@ -106,11 +106,11 @@
                         android:layout_marginEnd="32dp"
                         android:layout_marginBottom="10dp"
                         android:background="@drawable/background_1"
-                        android:drawableStart="@drawable/profile1"
+                        android:drawableStart="@drawable/notes"
                         android:drawablePadding="20dp"
                         android:paddingStart="20dp"
                         android:paddingEnd="20dp"
-                        android:text="@string/personal_information"
+                        android:text="@string/accessibility"
                         android:textAlignment="viewStart"
                         android:textSize="18sp"
                         android:textStyle="bold" />
@@ -154,25 +154,6 @@
                         android:textStyle="bold" />
 
                     <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/logOut"
-                        style="@android:style/Widget.Button"
-                        android:layout_width="320dp"
-                        android:layout_height="60dp"
-                        android:layout_marginStart="32dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginEnd="32dp"
-                        android:layout_marginBottom="10dp"
-                        android:background="@drawable/background_1"
-                        android:drawablePadding="20dp"
-                        android:paddingStart="20dp"
-                        android:paddingEnd="20dp"
-                        android:text="@string/log_out"
-                        android:textAlignment="viewStart"
-                        android:textSize="18sp"
-                        android:textStyle="bold"
-                        android:drawableStart="@drawable/ic_exit"/>
-
-                    <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/HomeButton"
                         style="@android:style/Widget.Button"
                         android:layout_width="320dp"
@@ -185,7 +166,6 @@
                         android:textColor="#ffffff"
                         android:textSize="18sp"
                         android:textStyle="bold" />
-
 
                 </LinearLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
