--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -22,11 +22,11 @@
         app:donut_unfinished_color="#D3D3D3" />
 
     <TextView
-        android:id="@+id/textStats"
+        android:id="@+id/trackerLogo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:layout_gravity="center"
+        android:layout_marginTop="16dp"
         android:text="Tracker"
         android:textColor="#FF4500"
         android:textSize="20sp" />
@@ -86,14 +86,73 @@
         android:progress="0"
         android:progressDrawable="@drawable/progress_calories" />
 
-    <!-- Button to Add New Trackable -->
-    <ImageButton
-        android:id="@+id/btn_add"
+
+    <!-- acheivements -->
+
+    <TextView
+        android:id="@+id/achievementLogo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginBottom="16dp"
-        android:background="?android:attr/selectableItemBackground"
-        android:src="@drawable/ic_add_circle" />
+        android:layout_marginTop="5dp"
+        android:text="Achievements"
+        android:textColor="#FF4500"
+        android:textSize="20sp" />
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <FrameLayout
+            android:layout_width="0dp"
+            android:layout_height="100dp"
+            android:layout_margin="8dp"
+            android:layout_weight="1"
+            android:background="#D3D3D3">
+
+            <ImageView
+                android:id="@+id/achievementStepsImage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:contentDescription="@string/achievement_steps" />
+        </FrameLayout>
+
+        <FrameLayout
+            android:layout_width="0dp"
+            android:layout_height="100dp"
+            android:layout_margin="8dp"
+            android:layout_weight="1"
+            android:background="#D3D3D3">
+
+            <ImageView
+                android:id="@+id/achievementWeightsImage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:contentDescription="@string/achievement_weights" />
+        </FrameLayout>
+
+        <FrameLayout
+            android:layout_width="0dp"
+            android:layout_height="100dp"
+            android:layout_margin="8dp"
+            android:layout_weight="1"
+            android:background="#D3D3D3">
+
+            <ImageView
+                android:id="@+id/achievementCaloriesImage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:contentDescription="@string/achievement_calories" />
+        </FrameLayout>
+
+    </LinearLayout>
+
 
 </LinearLayout>
